Backend/infra/k8s/event-bus.yaml
# event bus deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: abusalh/event-bus:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  name: event-bus
spec:
  selector:
    app: event-bus
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001

---
# create NodePort service for event-bus
apiVersion: v1
kind: Service
metadata:
  name: event-bus-nodeport
spec:
  type: NodePort
  selector:
    app: event-bus
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
      # nodePort: 30001
