Backend/infra/k8s/massages.yaml
# event bus deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: messages
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messages
  template:
    metadata:
      labels:
        app: messages
    spec:
      containers:
        - name: messages
          image: messages:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  name: messages
spec:
  selector:
    app: messages
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
