Backend/infra/k8s/ingress.yaml
# create ingress nginx for the application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: event-bus.com
      http:
        paths:
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: event-bus
                port:
                  number: 4001
